# escola-api-django

./: README.md  db.sqlite3  pyproject.toml
escola/: admin.py  models.py  serializer.py  views.py
escola/migrations/: 0001_initial.py  0002_matricula.py
setup/: settings.py  urls.py
